<resources>
    <string name="app_name">Calculator App</string>
    <string name="_0">0</string>
    <string name="зпт">,</string>
    <string name="плюс">+</string>
    <string name="равно">=</string>
    <string name="минус">-</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="звезда">*</string>
    <string name="разделитель">/</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="tablo">Наберите цыфры</string>
    <string name="action">Настройки</string>
    <string name="save">Сохранить</string>
    <string name="open">Открыть</string>
</resources>