<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/resultField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/operationField"
            android:layout_width="16dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/numberField"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="заполнить"
        android:hint="@string/tablo"
        android:inputType="phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <Button
            style="@style/ButtonTape_NumberClick"
            android:text="@string/_7" />

        <Button
            style="@style/ButtonTape_NumberClick"
            android:text="@string/_8" />

        <Button
            style="@style/ButtonTape_NumberClick"
            android:text="@string/_9" />

        <Button
            style="@style/ButtonTape_OperationClick"
            android:text="@string/разделитель" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <Button
            style="@style/ButtonTape_NumberClick"
            android:text="@string/_4" />

        <Button
            style="@style/ButtonTape_NumberClick"
            android:text="@string/_5" />

        <Button
            style="@style/ButtonTape_NumberClick"
            android:text="@string/_6" />

        <Button
            style="@style/ButtonTape_OperationClick"
            android:text="@string/звезда" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <Button
            style="@style/ButtonTape_NumberClick"
            android:text="@string/_1" />

        <Button
            style="@style/ButtonTape_NumberClick"
            android:text="@string/_2" />

        <Button
            style="@style/ButtonTape_NumberClick"
            android:text="@string/_3" />

        <Button
            style="@style/ButtonTape_OperationClick"
            android:text="@string/минус" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <Button
            style="@style/ButtonTape_NumberClick"
            android:text="@string/_0" />

        <Button
            style="@style/ButtonTape_NumberClick"
            android:text="@string/зпт" />

        <Button
            style="@style/ButtonTape_OperationClick"
            android:text="@string/плюс" />

        <Button
            style="@style/ButtonTape_OperationClick"
            android:text="@string/равно" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp">
        </TextView>
    </LinearLayout>


</LinearLayout>